--- a/templates/cron.html
+++ b/templates/cron.html
@@ -17,7 +17,7 @@
             </div>    
             <div class="row">
               <div class="col-md-12 side-menu-title">
-                <div style="height: 10px; border-bottom: 1px solid #6f5499;">
+                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
                     <h2>Cron Date & Time</h2>
@@ -59,7 +59,7 @@
 
             <div class="row">
               <div class="col-md-12 side-menu-title">
-                <div style="height: 10px; border-bottom: 1px solid #6f5499;">
+                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
                     <span class="glyphicon glyphicon-menu-down"></span>
                     <h2>Repeat Interval</h2>
